2006-09-17  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-colors.c: HSV and HSL now handle integer
	values the same way as the RGB and CMYK objects do, for consistency.

2006-09-17  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/pygimp-colors.c: Use proper return value types
	for object constructors. Fixes bug #354555.

2006-09-16  Manish Singh  <yosh@gimp.org>

	* plug-ins/pygimp/gimpfu.py
	* plug-ins/pygimp/plug-ins/gtkcons.py: let the gettext module

	* po-python/POTFILES.in
	* plug-ins/pygimp/gimpui.py: Mark a couple strings for translation
	here.

2006-09-16  Michael Natterer  <mitch@gimp.org>

	* app/tools/gimpperspectiveclonetool.c (button_press)
	* app/tools/gimpsourcetool.c (button_press): need to instruct the
	paint_core to make a copy of the projection whenever we clone from
	the same *image*, not from the same display. Fixes crash when
	cloning from the same image's projection in another view
	(bug #356209).

2006-09-15  Bill Skaggs  <weskaggs@primate.ucdavis.edu>

	* plug-ins/common/screenshot.c: when shooting a region, apply delay
	_after_ selecting region, applying before is useless.
	
2006-09-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpmodule.c: added domain_register method.

	* plug-ins/pygimp/gimpfu.py: define N_(). Added an optional
	"domain" parameter to the register() method. Register the domain
	with GIMP and initialize gettext if it is specified.

	* plug-ins/pygimp/plug-ins/gimpcons.py: use N_() to mark menu
	label and blurb for translation. Specify the translation domain.

	* plug-ins/pygimp/plug-ins/gtkcons.py: use gettext API for modules.

2006-09-15  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/Makefile.am
	* plug-ins/pygimp/pygimp-intl.h: added header file for i18n support.

	* plug-ins/pygimp/gimpmodule.c: bind to the gimp20-python
	translation domain.

	* plug-ins/pygimp/procbrowser.c: marked a string for translation.

2006-09-15  Sven Neumann  <sven@gimp.org>
