@@ -1,3 +1,9 @@
+2006-09-17  Sven Neumann  <sven@gimp.org>
+
+	* plug-ins/common/screenshot.c: reverted Bill's change. Applying
+	the delay before the selection makes as much sense as doing it
+	afterwards. Do it consistently at least.
+
 2006-09-17  Manish Singh  <yosh@gimp.org>
 
 	* plug-ins/pygimp/pygimp-colors.c: HSV and HSL now handle integer
